--- a/htdocs/card-support/index.htm
+++ b/htdocs/card-support/index.htm
@@ -136,12 +136,21 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
           <td align="center" valign="middle">&nbsp;</td>
           <td align="center" valign="middle">&nbsp;</td>
         </tr>
+        <tr>
+          <td valign="middle" align="left">
+            <p>Asus V6600</p>
+          </td>
+          <td width="1"><img src="../images/spacer.gif" width="1" height="32"></td>
+          <td align="center" valign="middle" colspan="7">
+            <p>This Combo Tuner/Video Card Will Not Work With dTV</p>
+          </td>
+        </tr>
         <tr> 
           <td valign="middle" align="left"> 
             <p>ATI All-In-Wonder</p>
           </td>
           <td width="1"><img src="../images/spacer.gif" width="1" height="32"></td>
-          <td align="center" valign="middle" colspan="7">
+          <td align="center" valign="middle" colspan="7"> 
             <p>This Card Will Not Work With dTV -- It Contains the Bt828 Chipset</p>
           </td>
         </tr>
@@ -197,6 +206,21 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
           <td align="center" valign="middle">&nbsp;</td>
           <td align="center" valign="middle">&nbsp;</td>
           <td align="center" valign="middle">&nbsp;</td>
+          <td align="center" valign="middle">&nbsp;</td>
+          <td align="center" valign="middle">&nbsp;</td>
+          <td align="center" valign="middle">&nbsp;</td>
+        </tr>
+        <tr> 
+          <td valign="middle" align="left"> 
+            <blockquote> 
+              <p>TVFM 98</p>
+            </blockquote>
+          </td>
+          <td width="1">&nbsp;</td>
+          <td align="center" valign="middle">&nbsp;</td>
+          <td align="center" valign="middle">&nbsp;</td>
+          <td align="center" valign="middle"><img src="../images/checkgreen.gif" width="22" height="22"></td>
+          <td align="center" valign="middle"><img src="../images/checkgreen.gif" width="22" height="22"></td>
           <td align="center" valign="middle">&nbsp;</td>
           <td align="center" valign="middle">&nbsp;</td>
           <td align="center" valign="middle">&nbsp;</td>
@@ -388,19 +412,17 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
         <tr> 
           <td valign="middle" align="left"> 
             <blockquote> 
-              <p>WinTV-Go</p>
+              <p>WinTV</p>
             </blockquote>
           </td>
           <td width="1"><img src="../images/spacer.gif" width="1" height="32"></td>
-          <td align="center" valign="middle"><img src="../images/checkgreen.gif" width="22" height="22"></td>
-          <td align="center" valign="middle"><img src="../images/checkgreen.gif" width="22" height="22"></td>
+          <td align="center" valign="middle">&nbsp;</td>
+          <td align="center" valign="middle">&nbsp;</td>
           <td align="center" valign="middle"><img src="../images/checkgreen.gif" width="22" height="22"></td>
           <td align="center" valign="middle"><img src="../images/checkgreen.gif" width="22" height="22"></td>
           <td align="center" valign="middle">&nbsp;</td>
           <td align="center" valign="middle">&nbsp;</td>
-          <td align="center" valign="middle"> 
-            <p><a href="WinTV-Go_Notes.htm">Note</a></p>
-          </td>
+          <td align="center" valign="middle">&nbsp;</td>
         </tr>
         <tr> 
           <td valign="middle" align="left"> 
@@ -418,21 +440,6 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
           <td align="center" valign="middle"> 
             <p><a href="WinTV-DBX_Notes.htm">Note</a></p>
           </td>
-        </tr>
-        <tr> 
-          <td valign="middle" align="left"> 
-            <blockquote> 
-              <p>WinTV</p>
-            </blockquote>
-          </td>
-          <td width="1"><img src="../images/spacer.gif" width="1" height="32"></td>
-          <td align="center" valign="middle">&nbsp;</td>
-          <td align="center" valign="middle">&nbsp;</td>
-          <td align="center" valign="middle"><img src="../images/checkgreen.gif" width="22" height="22"></td>
-          <td align="center" valign="middle"><img src="../images/checkgreen.gif" width="22" height="22"></td>
-          <td align="center" valign="middle">&nbsp;</td>
-          <td align="center" valign="middle">&nbsp;</td>
-          <td align="center" valign="middle">&nbsp;</td>
         </tr>
         <tr> 
           <td valign="middle" align="left"> 
@@ -463,6 +470,40 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
           <td align="center" valign="middle">&nbsp;</td>
           <td align="center" valign="middle"> 
             <p><a href="WinTV-FM_PAL_Notes.htm">Note</a></p>
+          </td>
+        </tr>
+        <tr> 
+          <td valign="middle" align="left"> 
+            <blockquote> 
+              <p>WinTV-Go</p>
+            </blockquote>
+          </td>
+          <td width="1"><img src="../images/spacer.gif" width="1" height="32"></td>
+          <td align="center" valign="middle"><img src="../images/checkgreen.gif" width="22" height="22"></td>
+          <td align="center" valign="middle"><img src="../images/checkgreen.gif" width="22" height="22"></td>
+          <td align="center" valign="middle"><img src="../images/checkgreen.gif" width="22" height="22"></td>
+          <td align="center" valign="middle"><img src="../images/checkgreen.gif" width="22" height="22"></td>
+          <td align="center" valign="middle">&nbsp;</td>
+          <td align="center" valign="middle">&nbsp;</td>
+          <td align="center" valign="middle"> 
+            <p><a href="WinTV-Go_Notes.htm">Note</a></p>
+          </td>
+        </tr>
+        <tr> 
+          <td valign="middle" align="left"> 
+            <blockquote> 
+              <p>WinTV-PVR</p>
+            </blockquote>
+          </td>
+          <td width="1"><img src="../images/spacer.gif" width="1" height="32"></td>
+          <td align="center" valign="middle">&nbsp;</td>
+          <td align="center" valign="middle">&nbsp;</td>
+          <td align="center" valign="middle"><img src="../images/checkgreen.gif" width="22" height="22"></td>
+          <td align="center" valign="middle"><img src="../images/checkgreen.gif" width="22" height="22"></td>
+          <td align="center" valign="middle">&nbsp;</td>
+          <td align="center" valign="middle">&nbsp;</td>
+          <td align="center" valign="middle"> 
+            <p><a href="WinTV-PVR_Notes.htm">Note</a></p>
           </td>
         </tr>
         <tr> 
@@ -889,8 +930,8 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
           <td width="1"><img src="../images/spacer.gif" width="1" height="32"></td>
           <td align="center" valign="middle">&nbsp;</td>
           <td align="center" valign="middle">&nbsp;</td>
-          <td align="center" valign="middle">&nbsp;</td>
-          <td align="center" valign="middle">&nbsp;</td>
+          <td align="center" valign="middle"><img src="../images/checkgreen.gif" width="22" height="22"></td>
+          <td align="center" valign="middle"><img src="../images/checkgreen.gif" width="22" height="22"></td>
           <td align="center" valign="middle">&nbsp;</td>
           <td align="center" valign="middle">&nbsp;</td>
           <td align="center" valign="middle">&nbsp;</td>
@@ -930,13 +971,15 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
             </blockquote>
           </td>
           <td width="1"><img src="../images/spacer.gif" width="1" height="32"></td>
+          <td align="center" valign="middle"><img src="../images/checkgreen.gif" width="22" height="22"></td>
+          <td align="center" valign="middle"><img src="../images/checkgreen.gif" width="22" height="22"></td>
           <td align="center" valign="middle">&nbsp;</td>
           <td align="center" valign="middle">&nbsp;</td>
           <td align="center" valign="middle">&nbsp;</td>
           <td align="center" valign="middle">&nbsp;</td>
-          <td align="center" valign="middle">&nbsp;</td>
-          <td align="center" valign="middle">&nbsp;</td>
-          <td align="center" valign="middle">&nbsp;</td>
+          <td align="center" valign="middle"> 
+            <p><a href="Terratec_TValue_Notes.htm">Note</a></p>
+          </td>
         </tr>
         <tr> 
           <td height="23" valign="middle" align="left"> 
@@ -996,6 +1039,21 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
         </tr>
         <tr> 
           <td height="23" valign="middle" align="left"> 
+            <p>Typhoon TView TV</p>
+          </td>
+          <td height="23" width="1"><img src="../images/spacer.gif" width="1" height="32"></td>
+          <td height="23" align="center" valign="middle"><img src="../images/checkgreen.gif" width="22" height="22"></td>
+          <td height="23" align="center" valign="middle"><img src="../images/xred.gif" width="22" height="22"></td>
+          <td height="23" align="center" valign="middle">&nbsp;</td>
+          <td height="23" align="center" valign="middle">&nbsp;</td>
+          <td height="23" align="center" valign="middle">&nbsp;</td>
+          <td height="23" align="center" valign="middle">&nbsp;</td>
+          <td height="23" align="center" valign="middle"> 
+            <p><a href="Typhoon_TV_Notes.htm">Note</a></p>
+          </td>
+        </tr>
+        <tr> 
+          <td height="23" valign="middle" align="left"> 
             <p>Typhoon TView TV/FM Tuner</p>
           </td>
           <td height="23" width="1"><img src="../images/spacer.gif" width="1" height="32"></td>
@@ -1005,7 +1063,9 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
           <td height="23" align="center" valign="middle">&nbsp;</td>
           <td height="23" align="center" valign="middle">&nbsp;</td>
           <td height="23" align="center" valign="middle">&nbsp;</td>
-          <td height="23" align="center" valign="middle">&nbsp;</td>
+          <td height="23" align="center" valign="middle"> 
+            <p>&nbsp;</p>
+          </td>
         </tr>
         <tr> 
           <td height="23" valign="middle" align="left"> 
