--- a/htdocs/card-support/Typhoon_TV_Notes.htm
+++ b/htdocs/card-support/Typhoon_TV_Notes.htm
@@ -1,7 +1,7 @@
 <html><!-- #BeginTemplate "/Templates/dtvnormal.dwt" -->
 <head>
 <!-- #BeginEditable "doctitle" --> 
-<title>dTV -- WinTV-D Notes</title>
+<title>dTV -- Typhoon TV Installation Notes</title>
 <!-- #EndEditable --> 
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 <style type="text/css">
@@ -29,7 +29,8 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
   </tr>
   <tr> 
     <td width="160"><img src="../images/dtvlogotvthumb.jpg" width="160" height="140" alt="dTV Logo"></td>
-    <td colspan="2" align="right" valign="bottom"> <font face="Verdana, Arial, Helvetica, sans-serif" size="5"><b><!-- #BeginEditable "Page%20Title" -->WinTV-D<br>
+    <td colspan="2" align="right" valign="bottom"> <font face="Verdana, Arial, Helvetica, sans-serif" size="5"><b><!-- #BeginEditable "Page%20Title" -->Typhoon 
+      TV <br>
       &nbsp;Installation &amp; Setup<!-- #EndEditable --></b></font></td>
   </tr>
   <tr bgcolor="#FFCC00" align="right"> 
@@ -40,12 +41,9 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
   </tr>
   <tr>
     <td colspan="3"><!-- #BeginEditable "Text" --> 
-      <p><b>Don Kolva</b> reports:</p>
-      <p>&quot;[My card is] set to standard BT878, tuner set to Philips 1236D 
-        Input 1, Audio set to MSP Radio, MSP Radio set to Speech Channel 1 and 
-        Auto Stereo Adjustment turned off.</p>
-      <p>&quot;Also the sound in on my TV-D card is into my Mic jack instead of 
-        line in.&quot;</p>
+      <p><b>An Anonymous User </b> reports:</p>
+      <p>&quot;This card uses a Temic tuner. dTV needs to handle it like a Philips 
+        PAL, a few channels are missing.&quot;</p>
       <!-- #EndEditable --></td>
   </tr>
   <tr> 
