--- a/htdocs/card-support/WinTV-PVR_Notes.htm
+++ b/htdocs/card-support/WinTV-PVR_Notes.htm
@@ -1,7 +1,7 @@
 <html><!-- #BeginTemplate "/Templates/dtvnormal.dwt" -->
 <head>
 <!-- #BeginEditable "doctitle" --> 
-<title>dTV -- WinTV-D Notes</title>
+<title>dTV -- WinTV-PVR Notes</title>
 <!-- #EndEditable --> 
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 <style type="text/css">
