--- a/htdocs/card-support/index.htm
+++ b/htdocs/card-support/index.htm
@@ -216,7 +216,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
               <p>TVFM 98</p>
             </blockquote>
           </td>
-          <td width="1">&nbsp;</td>
+          <td width="1"><img src="../images/spacer.gif" width="1" height="32"></td>
           <td align="center" valign="middle">&nbsp;</td>
           <td align="center" valign="middle">&nbsp;</td>
           <td align="center" valign="middle"><img src="../images/checkgreen.gif" width="22" height="22"></td>
