--- a/htdocs/setup/index.htm
+++ b/htdocs/setup/index.htm
@@ -42,12 +42,12 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
   <tr>
     <td colspan="3"><!-- #BeginEditable "Text" --> 
       <h2>Hardware Prerequisites</h2>
-      <p>See the <a href="../card-support/index.htm">supported cards page</a> to find out 
-        if your video capture card is supported. Please note that currently, your 
-        performance may degrade significantly if your CPU is slower than 400 MHz 
-        or your video card is not AGP. In addition, when using a system that is 
-        borderline fast enough, dTV is sensitive to system tray applications and 
-        active services.</p>
+      <p>See the <a href="../card-support/index.htm">supported cards page</a> 
+        to find out if your video capture card is supported. Please note that 
+        currently, your performance may degrade significantly if your CPU is slower 
+        than 400 MHz or your video card is not AGP. In addition, when using a 
+        system that is borderline fast enough, dTV is sensitive to system tray 
+        applications and active services.</p>
       <H2><br>
         Installation</H2>
       <P>Unzip all the files into a directory.</P>
@@ -55,28 +55,29 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
         Getting It Working</h2>
       <p>1. Delete any previous copy of dTV.ini</p>
       <p>2. Run dTV.exe</p>
-      <p> 3. Select video card and tuner type from dialog box that appears on 
-        startup. If your exact card type is not listed then try Standard Card 
-        (bt878). The make of tuner should be on the silver box on the card, choose 
-        the correct type depending on your region...</p>
-      <h3><img src="setup_choose_hardware_1.jpg" width="745" height="518" border="2"></h3>
+      <p> 3. Select specify your tuner card, tuner type, processor speed, and 
+        preferred default from the dialog box that appears on startup. If your 
+        exact card type is not listed then try Standard Card (bt878). The make 
+        of tuner should be on the silver box on the card, choose the correct type 
+        depending on your region.</p>
+      <h3><img src="setup_opening_screen.jpg" width="641" height="542"></h3>
       <p><br>
         4. Select required input from Settings/Video Input</p>
-      <h3><img src="setup_settings_video_input.jpg" width="462" height="228" border="2"></h3>
+      <h3><img src="setup_settings_video_input.jpg" border="2"></h3>
       <p><br>
         5. Select video format standard from Settings/Video Format menu</p>
-      <h3><img src="setup_settings_video_format.jpg" width="402" height="245" border="2"></h3>
+      <h3><img src="setup_settings_video_format.jpg" border="2"></h3>
       <p><br>
         6. Select audio input from Settings/Audio Input (if applicable for your 
         setup). </p>
-      <h3><img src="setup_settings_audio_input.jpg" width="318" height="205" border="2"></h3>
+      <h3><img src="setup_settings_audio_input.jpg" border="2"></h3>
       <p><br>
         7. Select MSP/Radio Options (If your card has a sound chip onboard)</p>
-      <h3><img src="setup_hardware_msp_radio.jpg" width="485" height="412" border="2"></h3>
+      <h3><img src="setup_hardware_msp_radio.jpg" border="2"></h3>
       <p><br>
         8. Choose Channel Scan (if you are using the internal tuner of your capture 
         card)</p>
-      <h3> <img src="setup_settings_channels_menu.jpg" width="235" height="163" border="2"></h3>
+      <h3> <img src="setup_settings_channels_menu.jpg" border="2"></h3>
       <p><br>
         9. You will be presented with a dialog box. Choose the appropriate source 
         from the frequency range drop-down menu and the press &quot;Start&quot;; 
@@ -86,10 +87,11 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
       <p><br>
         10. Choose the preferred aspect ratio for your source, or let dTV autodetect 
         the proper aspect ratio.</p>
-      <h3><img src="setup_ar_advanced_ratios.jpg" width="544" height="404" border="2"></h3>
+      <h3><img src="setup_ar_advanced_ratios.jpg" border="2"></h3>
       <p><br>
         For more information about the advanced features available via the dTV.ini 
-        file, please see the <a href="../IniFile.HTM">.ini documentation</a>. </p>
+        file, please see the <a href="../IniFile.HTM">.ini documentation</a>. 
+      </p>
       <h2><br>
         What if That Doesn't Work?</h2>
       <p> Please visit the HTPC section of the <a href="http://www.avsforum.com/"> 
