Minor card support cleanup.

--- a/htdocs/card-support/Terratec_TValue_Notes.htm
+++ b/htdocs/card-support/Terratec_TValue_Notes.htm
@@ -29,8 +29,8 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
   </tr>
   <tr> 
     <td width="160"><img src="../images/dtvlogotvthumb.jpg" width="160" height="140" alt="dTV Logo"></td>
-    <td colspan="2" align="right" valign="bottom"> <font face="Verdana, Arial, Helvetica, sans-serif" size="5"><b><!-- #BeginEditable "Page%20Title" -->WinTV-FM 
-      PAL (747)<br>
+    <td colspan="2" align="right" valign="bottom"> <font face="Verdana, Arial, Helvetica, sans-serif" size="5"><b><!-- #BeginEditable "Page%20Title" -->Terratec 
+      TValue <br>
       &nbsp;Installation &amp; Setup<!-- #EndEditable --></b></font></td>
   </tr>
   <tr bgcolor="#FFCC00" align="right"> 
