Added Various Screenshots

--- a/htdocs/screenshots/HD_Screenshots.htm
+++ b/htdocs/screenshots/HD_Screenshots.htm
@@ -1,7 +1,7 @@
 <html><!-- #BeginTemplate "/Templates/dtvnormal.dwt" -->
 <head>
 <!-- #BeginEditable "doctitle" --> 
-<title>dTV -- Additional Screenshots</title>
+<title>dTV -- Various HD Screenshots</title>
 <!-- #EndEditable --> 
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 <style type="text/css">
@@ -29,9 +29,8 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
   </tr>
   <tr> 
     <td width="160"><img src="../images/dtvlogotvthumb.jpg" width="160" height="140" alt="dTV Logo"></td>
-    <td colspan="2" align="right" valign="bottom">
-      <font face="Verdana, Arial, Helvetica, sans-serif" size="5"><b><!-- #BeginEditable "Page%20Title" --> 
-      dTV Screenshot Library&nbsp;<!-- #EndEditable --></b></font></td>
+    <td colspan="2" align="right" valign="bottom"> <font face="Verdana, Arial, Helvetica, sans-serif" size="5"><b><!-- #BeginEditable "Page%20Title" --> 
+      Various HD Screenshots&nbsp;<!-- #EndEditable --></b></font></td>
   </tr>
   <tr bgcolor="#FFCC00" align="right"> 
     <td colspan="3"><img src="../images/yellowspacer.gif" width="100%" height="2"></td>
@@ -41,41 +40,22 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
   </tr>
   <tr>
     <td colspan="3"><!-- #BeginEditable "Text" --> 
-      <p>Below, you will find additional screenshots organized by source. After 
-        viewing these shots, we are confident that you will see for yourself the 
-        clear benefits of deinterlacing using dTV through your 400 MHz Windows 
-        PC and a $50 capture card.</p>
-      <p>Thanks to all who have contributed to this screenshot library.</p>
-      <h2><br>
-        A/B Deinterlacing Screen Capture Comparisons</h2>
-      <p>Laserdisc -- <a href="IQ_screenshots.htm">IQ</a><br>
-        VHS -- <a href="index.htm">Titanic</a></p>
-      <h2><br>
-        Additional Screenshots By Source</h2>
-      <p>DVD<br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="Blue_Submarine_No6_Screenshots.htm">Blue 
-        Submarine No. 6</a> (Anime)</p>
-      <p>HDTV<br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="HD_Screenshots.htm">Various Screenshots</a> 
-        (Downconverted from 1080i)</p>
-      <p>Laserdisc<br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="IQ_screenshots.htm">IQ</a> (Drama, 
-        Comedy)</p>
-      <p> Playstation 2<br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="Blue_Submarine_No6_Screenshots.htm">Blue 
-        Submarine No. 6</a> (Anime; DVD through Playstation 2)<br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="Dead_Or_Alive_2_Screenshots.htm">Dead 
-        or Alive 2</a> (Video Game)<br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="Dynasty_Warrior_2_Screenshots.htm">Dynasty 
-        Warrior 2</a> (Video Game)</p>
-      <p>Satellite (Canal)<br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="Sports_News_Screenshots.htm">Sports 
-        News</a> (PAL S-Video)<br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="Talk_Show_Screenshots.htm">Talk 
-        Show</a> (PAL Composite)</p>
-      <p> VHS<br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="index.htm">Titanic</a> (Drama) 
+      <h2>HDTV (1080i)</h2>
+      <p>Below are various HD screenshots provided by Li On. These screenshots 
+        are of 1080i video downconverted to 480i and fed into dTV version 2.0.2 
+        using s-video. Of course, it would be preferrable in most normal viewing 
+        conditions to view the 1080i video directly without dTV, but these screenshots 
+        show the versatility of dTV in select circumstances.</p>
+      <p>Please note that these are 720 x 480 overlay grabs and that they would 
+        be squeezed by dTV for normal viewing conditions to the 16:9 aspect ratio.<br>
       </p>
+      <p><b>Title</b>: Various HD Screenshots<br>
+        <b>Connection</b>: S-Video<br>
+        <b>Capture/Tuner Card</b>: Zoltrix TV-Max<br>
+      </p>
+      <p> <img src="HD_Flowers.jpg" width="720" height="480" border="3"> </p>
+      <p><img src="HD_City.jpg" width="720" height="480" border="3"> </p>
+      <p><img src="HD_Card.jpg" width="720" height="480" border="3"></p>
       <!-- #EndEditable --></td>
   </tr>
   <tr> 
