--- a/htdocs/screenshots/Talk_Show_Screenshots.htm
+++ b/htdocs/screenshots/Talk_Show_Screenshots.htm
@@ -1,7 +1,7 @@
 <html><!-- #BeginTemplate "/Templates/dtvnormal.dwt" -->
 <head>
-<!-- #BeginEditable "doctitle" --> 
-<title>dTV -- Additional Screenshots</title>
+<!-- #BeginEditable "doctitle" -->
+<title>dTV -- Satellite Sports News Screenshots</title>
 <!-- #EndEditable --> 
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 <style type="text/css">
@@ -29,9 +29,8 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
   </tr>
   <tr> 
     <td width="160"><img src="../images/dtvlogotvthumb.jpg" width="160" height="140" alt="dTV Logo"></td>
-    <td colspan="2" align="right" valign="bottom">
-      <font face="Verdana, Arial, Helvetica, sans-serif" size="5"><b><!-- #BeginEditable "Page%20Title" --> 
-      dTV Screenshot Library&nbsp;<!-- #EndEditable --></b></font></td>
+    <td colspan="2" align="right" valign="bottom"> <font face="Verdana, Arial, Helvetica, sans-serif" size="5"><b><!-- #BeginEditable "Page%20Title" --> 
+      Satellite Talk Show Screenshots&nbsp;<!-- #EndEditable --></b></font></td>
   </tr>
   <tr bgcolor="#FFCC00" align="right"> 
     <td colspan="3"><img src="../images/yellowspacer.gif" width="100%" height="2"></td>
@@ -41,41 +40,16 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
   </tr>
   <tr>
     <td colspan="3"><!-- #BeginEditable "Text" --> 
-      <p>Below, you will find additional screenshots organized by source. After 
-        viewing these shots, we are confident that you will see for yourself the 
-        clear benefits of deinterlacing using dTV through your 400 MHz Windows 
-        PC and a $50 capture card.</p>
-      <p>Thanks to all who have contributed to this screenshot library.</p>
-      <h2><br>
-        A/B Deinterlacing Screen Capture Comparisons</h2>
-      <p>Laserdisc -- <a href="IQ_screenshots.htm">IQ</a><br>
-        VHS -- <a href="index.htm">Titanic</a></p>
-      <h2><br>
-        Additional Screenshots By Source</h2>
-      <p>DVD<br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="Blue_Submarine_No6_Screenshots.htm">Blue 
-        Submarine No. 6</a> (Anime)</p>
-      <p>HDTV<br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="HD_Screenshots.htm">Various Screenshots</a> 
-        (Downconverted from 1080i)</p>
-      <p>Laserdisc<br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="IQ_screenshots.htm">IQ</a> (Drama, 
-        Comedy)</p>
-      <p> Playstation 2<br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="Blue_Submarine_No6_Screenshots.htm">Blue 
-        Submarine No. 6</a> (Anime; DVD through Playstation 2)<br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="Dead_Or_Alive_2_Screenshots.htm">Dead 
-        or Alive 2</a> (Video Game)<br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="Dynasty_Warrior_2_Screenshots.htm">Dynasty 
-        Warrior 2</a> (Video Game)</p>
-      <p>Satellite (Canal)<br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="Sports_News_Screenshots.htm">Sports 
-        News</a> (PAL S-Video)<br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="Talk_Show_Screenshots.htm">Talk 
-        Show</a> (PAL Composite)</p>
-      <p> VHS<br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="index.htm">Titanic</a> (Drama) 
+      <h2>Talk Show (PAL; Composite)</h2>
+      <p>Below are two screenshots provided by Ali from a talk show (Canal) using 
+        version 2.1.1 alpha.<br>
       </p>
+      <p><b>Title</b>: Talk Show<br>
+        <b>Source</b>: Satellite (Canal)<br>
+        <b>Connection</b>: Composite</p>
+      <p> <img src="Talk_Show.jpg" width="768" height="576" border="3"> <br>
+        <br>
+        <img src="Talk_Show_No2.jpg" width="768" height="576" border="3"> </p>
       <!-- #EndEditable --></td>
   </tr>
   <tr> 
