Added information about 4-times daily dTV app and DirectShow source zips.

--- a/htdocs/developers.htm
+++ b/htdocs/developers.htm
@@ -40,7 +40,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
   </tr>
   <tr>
     <td colspan="3"><!-- #BeginEditable "Text" --> 
-      <p><b>Additional developers are needed for dTV!</b> In about three months, 
+      <p><b>Additional developers are needed for dTV!</b> In only a short time, 
         this project has garnered a <b>large, loyal, active, and knowledgable 
         user-base</b> of videophiles. This project is making waves in the home 
         theater industry! The project is currently in need of developers with 
@@ -51,18 +51,22 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
         yourself to the <a href="http://sourceforge.net/mail/?group_id=7420">mailing 
         list</a>.</p>
       <p>Please refer to the <a href="bugs/Bugs_108.htm">bugs</a> and <a href="Todo.htm">Todo</a> 
-        pages for the current task list (Note, these files may be outdated by
-      the time you read this page.&nbsp; It's recommended to join the mailing
-      list to keep yourself up to date!). If you think that you can take on a part 
-        of one of these tasks, everyone on the mailing list would love to hear 
-        from you.</p>
+        pages for the current task list (Note, these files may be outdated by 
+        the time you read this page.&nbsp; It's recommended to join the mailing 
+        list to keep yourself up to date!). If you think that you can take on 
+        a part of one of these tasks, everyone on the mailing list would love 
+        to hear from you.</p>
       <p>dTV is released under the GNU Public License. Browse the <a href="http://cvs.sourceforge.net/cgi-bin/cvsweb.cgi?cvsroot=deinterlace">CVS 
         repository</a> and take a look at the code, then <a href="downloads.htm">download</a> 
-        the latest source zipped. The source compiles under MS Visual C++. The 
-        application has grown out of the GPL code base of MultiDec and MoreTV, 
-        two cable descrambling programs.&nbsp; By combining the GPL parts of both 
-        and extending them both, we were able to create a new legal totally 
-        open source project.</p>
+        the latest release source zipped. In addition to the latest release source, 
+        you may be interested in reviewing the latest beta source, updated from 
+        CVS four times daily (<a href="ftp://deinterlace.sourceforge.net/pub/deinterlace/dtvmodule.zip">dTV 
+        application</a>, <a href="ftp://deinterlace.sourceforge.net/pub/deinterlace/directshowmodule.zip"> 
+        dTV Test DirectShow filter</a>).</p>
+      <p>The source compiles under MS Visual C++ 6.0. The application has grown 
+        out of the GPL code base of MultiDec and MoreTV, two cable descrambling 
+        programs.&nbsp; By combining the GPL parts of both and extending them 
+        both, we were able to create a new legal totally open source project.</p>
       <p>The individual source files are in the&nbsp;<a href="http://cvs.sourceforge.net/cgi-bin/cvsweb.cgi?cvsroot=deinterlace">CVS 
         Repository</a>.&nbsp; To get check-out and check-in access, you will need 
         to get cvs and to make a few configuration changes see the <a href="CVS_Instructions.htm">dTV 
@@ -75,7 +79,11 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
         page</a></p>
       <p><a href="http://sourceforge.net/mail/?group_id=7420">Mailing List</a></p>
       <p><a href="http://cvs.sourceforge.net/cgi-bin/cvsweb.cgi?cvsroot=deinterlace">Browse 
-        CVS Repository</a></p>
+        CVS Repository</a> </p>
+      <p><a href="ftp://deinterlace.sourceforge.net/pub/deinterlace/dtvmodule.zip">dTV 
+        Application Source Zip</a></p>
+      <p><a href="ftp://deinterlace.sourceforge.net/pub/deinterlace/directshowmodule.zip">dTV 
+        Test DirectShow Filter Source Zip</a></p>
       <h2><br>
         Deinterlace Project Developer Resources</h2>
       <p>Mark Rejhon's <a href="32Spec.htm">Spec of His 3:2 Pulldown Algorithm</a>. 
@@ -91,15 +99,19 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
         for Windows 9x.</p>
       <h2> <br>
         BT848 Links</h2>
-      <p><a href="http://ebiz4.conexant.com/default.sph/SaServletEngine.class/Web/products/products.jsp?Type=Prod&ProdFamId=10&ProdCatId=0&ProdSubCatId=397&PartId=227">BT878a
-      page at Conexant</a></p>
+      <p><a href="http://ebiz4.conexant.com/default.sph/SaServletEngine.class/Web/products/products.jsp?Type=Prod&ProdFamId=10&ProdCatId=0&ProdSubCatId=397&PartId=227">BT878a 
+        page at Conexant</a></p>
       <p><a href="http://me.in-berlin.de/~kraxel/bttv.html">bttv - Linux Driver 
         - Without this none of this would have been possible</a></p>
       <p><a href="http://vulture.dmem.strath.ac.uk/bt848/">FreeBSD B</a><a href="http://vulture.dmem.strath.ac.uk/bt848/">t848 
         Driver Project</a></p>
       <h2><br>
         AVScience Threads</h2>
-      <p><a href="http://www.avsforum.com/ubb/Forum12/HTML/005313.html">dTV 2.0.0 
+      <p><a href="http://www.avsforum.com/ubb/Forum12/HTML/007370.html">dTV 2.1.2 
+        Release Thread</a> (AVS Forum)<br>
+        <a href="http://www.avsforum.com/ubb/Forum12/HTML/005917.html">dTV 2.0.2 
+        Release Thread</a> (AVS Forum)<br>
+        <a href="http://www.avsforum.com/ubb/Forum12/HTML/005313.html">dTV 2.0.0 
         Release Thread</a> (AVS Forum)<br>
         <a href="http://www.avsforum.com/ubb/Forum12/HTML/005129.html">ANNOUNCEMENT: 
         dTV 1.9 software video processor is now OUT</a> (AVS Forum)<br>
@@ -121,10 +133,6 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
         of NTSC/PAL TV deinterlacing program</a><br>
         <a href="http://www.avsforum.com/ubb/Forum12/HTML/000071.html">Marc Rejhon's 
         Algorithm for 3-2 Pulldown Deinterlacing</a></p>
-      <h2><br>
-        Other Downloads</h2>
-      <p>Initial Test version of a DirectShow Filter (see the <a href="http://cvs.sourceforge.net/cgi-bin/cvsweb.cgi?cvsroot=deinterlace">project 
-        CVS</a>)</p>
       <!-- #EndEditable --></td>
   </tr>
   <tr> 
