--- a/htdocs/card-support/index.htm
+++ b/htdocs/card-support/index.htm
@@ -151,7 +151,8 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
           </td>
           <td width="1"><img src="../images/spacer.gif" width="1" height="32"></td>
           <td align="center" valign="middle" colspan="7"> 
-            <p>This Card Will Not Work With dTV -- It Contains the Bt829 Chipset</p>
+            <p>Will Not Work With dTV -- It Contains the ATI Rage Theater Pro 
+              Chipset</p>
           </td>
         </tr>
         <tr> 
