Feedback from AVS forum RFI.

--- a/htdocs/card-support/index.htm
+++ b/htdocs/card-support/index.htm
@@ -877,8 +877,8 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
             <p>PixelView PlayTV Pro</p>
           </td>
           <td height="23" width="1"><img src="../images/spacer.gif" width="1" height="32"></td>
-          <td height="23" align="center" valign="middle">&nbsp;</td>
-          <td height="23" align="center" valign="middle">&nbsp;</td>
+          <td height="23" align="center" valign="middle"><img src="../images/checkgreen.gif" width="22" height="22"></td>
+          <td height="23" align="center" valign="middle"><img src="../images/checkgreen.gif" width="22" height="22"></td>
           <td height="23" align="center" valign="middle">&nbsp;</td>
           <td height="23" align="center" valign="middle">&nbsp;</td>
           <td height="23" align="center" valign="middle">&nbsp;</td>
