--- a/htdocs/card-support/index.htm
+++ b/htdocs/card-support/index.htm
@@ -136,12 +136,12 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
           <td align="center" valign="middle">&nbsp;</td>
           <td align="center" valign="middle">&nbsp;</td>
         </tr>
-        <tr>
-          <td valign="middle" align="left">
+        <tr> 
+          <td valign="middle" align="left"> 
             <p>Asus V6600</p>
           </td>
           <td width="1"><img src="../images/spacer.gif" width="1" height="32"></td>
-          <td align="center" valign="middle" colspan="7">
+          <td align="center" valign="middle" colspan="7"> 
             <p>This Combo Tuner/Video Card Will Not Work With dTV</p>
           </td>
         </tr>
@@ -294,6 +294,19 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
           <td height="23" align="center" valign="middle">&nbsp;</td>
           <td height="23" align="center" valign="middle">&nbsp;</td>
           <td height="23" align="center" valign="middle">&nbsp;</td>
+        </tr>
+        <tr> 
+          <td valign="middle" align="left"> 
+            <p>Cybertainment CyberMail AV (879)</p>
+          </td>
+          <td width="1"><img src="../images/spacer.gif" width="1" height="32"></td>
+          <td align="center" valign="middle">&nbsp;</td>
+          <td align="center" valign="middle">&nbsp;</td>
+          <td align="center" valign="middle"><img src="../images/checkgreen.gif" width="22" height="22"></td>
+          <td align="center" valign="middle"><img src="../images/checkgreen.gif" width="22" height="22"></td>
+          <td align="center" valign="middle">&nbsp;</td>
+          <td align="center" valign="middle">&nbsp;</td>
+          <td align="center" valign="middle">&nbsp;</td>
         </tr>
         <tr> 
           <td valign="middle" align="left"> 
@@ -823,7 +836,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
           <td height="23" width="1"><img src="../images/spacer.gif" width="1" height="32"></td>
           <td height="23" align="center" valign="middle"><img src="../images/checkgreen.gif" width="22" height="22"></td>
           <td height="23" align="center" valign="middle"><img src="../images/checkgreen.gif" width="22" height="22"></td>
-          <td height="23" align="center" valign="middle">&nbsp;</td>
+          <td height="23" align="center" valign="middle"><img src="../images/checkgreen.gif" width="22" height="22"></td>
           <td height="23" align="center" valign="middle">&nbsp;</td>
           <td height="23" align="center" valign="middle">&nbsp;</td>
           <td height="23" align="center" valign="middle">&nbsp;</td>
@@ -854,7 +867,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
           <td align="center" valign="middle">&nbsp;</td>
           <td align="center" valign="middle">&nbsp;</td>
           <td align="center" valign="middle"><img src="../images/checkgreen.gif" width="22" height="22"></td>
-          <td align="center" valign="middle">&nbsp;</td>
+          <td align="center" valign="middle"><img src="../images/checkgreen.gif" width="22" height="22"></td>
           <td align="center" valign="middle">&nbsp;</td>
           <td align="center" valign="middle">&nbsp;</td>
           <td align="center" valign="middle">&nbsp;</td>
@@ -933,6 +946,19 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
           <td align="center" valign="middle">&nbsp;</td>
           <td align="center" valign="middle"><img src="../images/checkgreen.gif" width="22" height="22"></td>
           <td align="center" valign="middle"><img src="../images/checkgreen.gif" width="22" height="22"></td>
+          <td align="center" valign="middle">&nbsp;</td>
+          <td align="center" valign="middle">&nbsp;</td>
+          <td align="center" valign="middle">&nbsp;</td>
+        </tr>
+        <tr>
+          <td valign="middle" align="left">
+            <p>STB PCI TV (FM)</p>
+          </td>
+          <td width="1"><img src="../images/spacer.gif" width="1" height="32"></td>
+          <td align="center" valign="middle">&nbsp;</td>
+          <td align="center" valign="middle">&nbsp;</td>
+          <td align="center" valign="middle"><img src="../images/checkgreen.gif" width="22" height="22"></td>
+          <td align="center" valign="middle"><img src="../images/xred.gif" width="22" height="22"></td>
           <td align="center" valign="middle">&nbsp;</td>
           <td align="center" valign="middle">&nbsp;</td>
           <td align="center" valign="middle">&nbsp;</td>
