--- a/htdocs/Todo.htm
+++ b/htdocs/Todo.htm
@@ -56,12 +56,11 @@ indicated above, check the source code or the mailing list to verify.</p>
           channels and ability to automatically assign standard channel number</li>
         <li>Per channel video format selection for those in dual-standard countries</li>
         <li>GUI fine-tuning of channel frequencies</li>
-        <li>Typing channel numbers on keyboard/remote turns to channel (e.g., 
-          typing &quot;48&quot; goes to channel 48)</li>
+        <li>Allow American-style channel turning--typing channel numbers on keyboard/remote 
+          to turn to channel (e.g., typing &quot;48&quot; goes to channel 48 in 
+          frequency tables from channels.txt)</li>
         <li>Automatic detection of video format, PAL, SECAM, and NTSC coded material</li>
         <li>Add hotkeys to all essential functions for those with advanced remotes</li>
-        <li>Double click screen to zoom instead of single click. Use single click 
-          to drag screen in window mode.</li>
         <li>Calibrate Cards to give best set of video adjustments</li>
         <li>Investigate the following Color Filtering options: 
           <ul>
@@ -85,14 +84,12 @@ indicated above, check the source code or the mailing list to verify.</p>
         <li>Check that TeleText works properly and move it to display on screen 
           rather than in separate window</li>
         <li>Make code base more compatible with borland development tools</li>
-        <li>Ability to launch dtv from shortcut</li>
-        <li>Sort supported card list in hardware setup menu</li>
         <li>Add support for Boeder PC Chatcam: BT848, composite + svideo, no tuner</li>
         <li>Improve 3:2 pulldown for poor quality sources...perhaps method to 
           manually increase bitshift</li>
         <li>Specific mode for anime: manual selection, not part of autodetect 
         </li>
-        <li>Mark Rejhon will probably implement dynamic thresholdscapability, 
+        <li>Mark Rejhon will probably implement dynamic thresholds capability, 
           including dynamic repeat count - lower mode switch latencies for clearer 
           pictures fromDVD and LaserDisc.Eventually this could make 3:2 detection 
           eventually MUCH more sensitive - maybe even sensitive enough to add 
