--- a/htdocs/downloads.htm
+++ b/htdocs/downloads.htm
@@ -40,16 +40,16 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
   </tr>
   <tr>
     <td colspan="3" height="1542"><!-- #BeginEditable "Text" --> 
-      <p>Version 2.1.2&#151;<b>Beta</b>&#151;[<a href="distributions/dTV212exe.zip">Binary 
-        Zipped</a>] [<a href="distributions/dTV212src.zip">Source Zipped</a>] [<a href="readme/dTV_Readme2110.htm">README</a>]<br>
+      <p>Version 2.1.2&#151;<b>Beta</b>&#151;[<a href="http://prdownloads.sourceforge.net/deinterlace/dTV212exe.zip">Binary 
+        Zipped</a>] [<a href="http://prdownloads.sourceforge.net/deinterlace/dTV212src.zip">Source Zipped</a>] [<a href="readme/dTV_Readme2110.htm">README</a>]<br>
       &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Advanced flags fixes&nbsp;<br>
       &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Mpact2 24 bit mode fix (works but you can't
       see menu or OSD)<br>
       &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Tuner menu option fix.
       </p>
       <p><br>
-      Version 2.1.1&#151;<b>Superceded</b>&#151;[<a href="distributions/dTV211exe.zip">Binary 
-        Zipped</a>] [<a href="distributions/dTV211src.zip">Source Zipped</a>] [<a href="readme/dTV_Readme2110.htm">README</a>]<br>
+      Version 2.1.1&#151;<b>Superceded</b>&#151;[<a href="http://prdownloads.sourceforge.net/deinterlace/dTV211exe.zip">Binary 
+        Zipped</a>] [<a href="http://prdownloads.sourceforge.net/deinterlace/dTV211src.zip">Source Zipped</a>] [<a href="readme/dTV_Readme2110.htm">README</a>]<br>
       &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Preliminary judder fix<br>
       &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Steve's new 2-Frame Deinterlacing algorithm<br>
       &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Tom's new Greedy Deinterlacing algorithm
@@ -83,15 +83,15 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
       many other status items now kept in ini file.</font><br>
       &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
       </p>
-      <p>Version 2.0.2&#151;<b>Stable</b><b></b>&#151;[<a href="distributions/dTV202exe.zip">Binary 
-        Zipped</a>] [<a href="distributions/dTV202src.zip">Source Zipped</a>]<br>
+      <p>Version 2.0.2&#151;<b>Stable</b><b></b>&#151;[<a href="http://prdownloads.sourceforge.net/deinterlace/dTV202exe.zip">Binary 
+        Zipped</a>] [<a href="http://prdownloads.sourceforge.net/deinterlace/dTV202src.zip">Source Zipped</a>]<br>
       &nbsp;&nbsp;&nbsp;&nbsp; Bug fixed - Windows 2000 driver code was
       broken.&nbsp; No other binary changes.<br>
       &nbsp;&nbsp;&nbsp;&nbsp; Deleted unused temporary files from 2.0.2 source,
       so source zip is smaller than 2.0.1&nbsp;
       </p>
-      <p>Version 2.0.1&#151;<b>Superceded</b>&#151;[<a href="distributions/dTV201exe.zip">Binary 
-        Zipped</a>] [<a href="distributions/dTV201src.zip">Source Zipped</a>]<br>
+      <p>Version 2.0.1&#151;<b>Superceded</b>&#151;[<a href="http://prdownloads.sourceforge.net/deinterlace/dTV201exe.zip">Binary 
+        Zipped</a>] [<a href="http://prdownloads.sourceforge.net/deinterlace/dTV201src.zip">Source Zipped</a>]<br>
       &nbsp;&nbsp;&nbsp;&nbsp; Numerous changes by Michael of Conexant Systems, Inc.<br>
       &nbsp;&nbsp;&nbsp;&nbsp; Bug fixed - Occasional combing artifacts during commercials/music videos<br>
       &nbsp;&nbsp;&nbsp;&nbsp; Bug fixed - Macrovision Purple Lines Fix!  Adjustable via INI file.<br>
@@ -100,8 +100,8 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
       &nbsp;&nbsp;&nbsp;&nbsp; Better Channel List Functionality&nbsp;<br>
       &nbsp;&nbsp;&nbsp;&nbsp; New optional blended deinterlace algorithm
       </p>
-      <p>Version 2.0.0&#151;<b>Stable</b>&#151;[<a href="distributions/dTV200exe.zip">Binary 
-        Zipped</a>] [<a href="distributions/dTV200src.zip">Source Zipped</a>] 
+      <p>Version 2.0.0&#151;<b>Stable</b>&#151;[<a href="http://prdownloads.sourceforge.net/deinterlace/dTV200exe.zip">Binary 
+        Zipped</a>] [<a href="http://prdownloads.sourceforge.net/deinterlace/dTV200src.zip">Source Zipped</a>] 
         [<a href="readme/dTV_Readme200.htm">README</a>]<br>
       &nbsp;&nbsp;&nbsp;&nbsp; Bug fixed - Tearing is gone at all refresh rates!<br>
       &nbsp;&nbsp;&nbsp;&nbsp; Bug fixed - Error message no longer pops up if
@@ -130,8 +130,8 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
       &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - Old Video Deinterlace during fast
       moving images<br>
       <br>
-        Version 1.9&#151;<b>Stable</b>&#151;[<a href="distributions/dTV19exe.zip">Binary 
-        Zipped</a>] [<a href="distributions/dTV19src.zip">Source Zipped</a>] [<a href="readme/dTV_Readme109.htm">README</a>]<br>
+        Version 1.9&#151;<b>Stable</b>&#151;[<a href="http://prdownloads.sourceforge.net/deinterlace/dTV19exe.zip">Binary 
+        Zipped</a>] [<a href="http://prdownloads.sourceforge.net/deinterlace/dTV19src.zip">Source Zipped</a>] [<a href="readme/dTV_Readme109.htm">README</a>]<br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Automatic aspect ratio detection!<br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Slightly less dropped frames on slower systems<br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Debug logfile dTV.txt disabled by default<br>
@@ -142,8 +142,8 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
         for NTSC (majority of users)<br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Advanced Video Flags configuration dialog
       </p>
-      <p>Version 1.8&#151;<b>Stable</b>&#151;[<a href="distributions/dTV18exe.zip">Binary 
-        Zipped</a>] [<a href="distributions/dTV18src.zip">Source Zipped</a>] 
+      <p>Version 1.8&#151;<b>Stable</b>&#151;[<a href="http://prdownloads.sourceforge.net/deinterlace/dTV180exe.zip">Binary 
+        Zipped</a>] [<a href="http://prdownloads.sourceforge.net/deinterlace/dTV18src.zip">Source Zipped</a>] 
         [<a href="readme/dTV_Readme108.htm">README</a>]<br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Aspect ratio control simplified and made 
         more intuitive<br>
@@ -160,8 +160,8 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
         sequence changes<br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Minor code cleanup
       </p>
-      <p>Version 1.7 &#151;<b>Stable</b>&#151;[<a href="distributions/dTV17exe.zip">Binary 
-        Zipped</a>] [<a href="distributions/dTV17src.zip">Source Zipped</a>] 
+      <p>Version 1.7 &#151;<b>Stable</b>&#151;[<a href="http://prdownloads.sourceforge.net/deinterlace/dTV17exe.zip">Binary 
+        Zipped</a>] [<a href="http://prdownloads.sourceforge.net/deinterlace/dTV17src.zip">Source Zipped</a>] 
         [<a href="readme/dTV_Readme106.htm">README</a>]<br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Integrated Michael's aspect ratio control 
         code<br>
@@ -174,8 +174,8 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Note: No TV tuner card related bugfixes 
         over 1.6; see <a href="bugs/Bugs_107.htm">Known Bugs</a> for current list
       </p>
-      <p>Version 1.6 Beta 4&#151;<b>Superceded</b>&#151;[<a href="distributions/dTV16b4.zip">Binary 
-        Zipped</a>] [<a href="distributions/dTV16src.zip">Source Zipped</a>] [<a href="readme/dTV_Readme106.htm">README</a>]<br>
+      <p>Version 1.6 Beta 4&#151;<b>Superceded</b>&#151;[<a href="http://prdownloads.sourceforge.net/deinterlace/dTV16b4.zip">Binary 
+        Zipped</a>] [<a href="http://prdownloads.sourceforge.net/deinterlace/dTV16src.zip">Source Zipped</a>] [<a href="readme/dTV_Readme106.htm">README</a>]<br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Auto detect enabled by default<br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Video format (e.g., NTSC) automatically 
         selected upon selection of<br>
@@ -186,33 +186,33 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Changes to synchronization code<br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Note: See <a href="bugs/Bugs_106b4.htm">Known 
         Bugs</a> for additional details</p>
-      <p>Version 1.5&#151;<b>Superceded</b>&#151;[<a href="distributions/dTV15exe.zip">Binary 
-        Zipped</a>] [<a href="distributions/dTV15src.zip">Source 
+      <p>Version 1.5&#151;<b>Superceded</b>&#151;[<a href="http://prdownloads.sourceforge.net/deinterlace/dTV15exe.zip">Binary 
+        Zipped</a>] [<a href="http://prdownloads.sourceforge.net/deinterlace/dTV15src.zip">Source 
         Zipped</a>] [<a href="readme/dTV_Readme105.htm">README</a>]<br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Auto 3:2 pulldown detect for NTSC<br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Auto 2:2 pulldown detect for PAL (not very 
         reliable needs some tweaking)<br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Adaptive video deinterlacing<br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Note: Teletext and CC broken</p>
-      <p>Version 1.4&#151;<b>Superceded</b>&#151;[<a href="distributions/dTV14exe.zip">Binary Zipped</a>] 
-        [<a href="distributions/dTV14src.zip">Source Zipped</a>] [<a href="readme/dTV_Readme104.htm">README</a>]<br>
+      <p>Version 1.4&#151;<b>Superceded</b>&#151;[<a href="http://prdownloads.sourceforge.net/deinterlace/dTV14exe.zip">Binary Zipped</a>] 
+        [<a href="http://prdownloads.sourceforge.net/deinterlace/dTV14src.zip">Source Zipped</a>] [<a href="readme/dTV_Readme104.htm">README</a>]<br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Fix for overlays in low colour depths<br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Still capture in ppm format<br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Overscan support</p>
-      <p>Version 1.3 &#151;<b>Superceded</b>&#151; [<a href="distributions/dTv13aexe.zip">Binary 
-        Zipped</a>] [<a href="distributions/dTV13asrc.zip">Source Zipped</a>] [<a href="readme/dTV_Readme103.htm">README</a>]<br>
+      <p>Version 1.3 &#151;<b>Superceded</b>&#151; [<a href="http://prdownloads.sourceforge.net/deinterlace/dTv13aexe.zip">Binary 
+        Zipped</a>] [<a href="http://prdownloads.sourceforge.net/deinterlace/dTV13asrc.zip">Source Zipped</a>] [<a href="readme/dTV_Readme103.htm">README</a>]<br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Code clean up<br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Better card support<br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Sound bugs fixed<br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Changed overlay colour<br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Open Source video deinterlace version 1</p>
-      <p>Version 1.2 &#151;<b>Superceded</b>&#151; [<a href="distributions/dTVex12.zip">Binary 
+      <p>Version 1.2 &#151;<b>Superceded</b>&#151; [<a href="http://prdownloads.sourceforge.net/deinterlace/dTVex12.zip">Binary 
         Zipped</a>] [<a href="readme/dTV_Readme102.htm">README</a>]<br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Fix for flipping with bTV plug-ins</p>
-      <p>Version 1.1 [<a href="distributions/dTVex11.zip">Binary Zipped</a>] [<a href="readme/dTV_Readme101.htm">README</a>]<br>
+      <p>Version 1.1 [<a href="http://prdownloads.sourceforge.net/deinterlace/dTVex11.zip">Binary Zipped</a>] [<a href="readme/dTV_Readme101.htm">README</a>]<br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Support for bTV plugins added<br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Full screen support</p>
-      <p>Version 1.0 [<a href="distributions/dTVexe.zip">Binary Zipped</a>] [<a href="distributions/dTVsrc.zip">Source 
+      <p>Version 1.0 [<a href="http://prdownloads.sourceforge.net/deinterlace/dTVexe.zip">Binary Zipped</a>] [<a href="http://prdownloads.sourceforge.net/deinterlace/dTVsrc.zip">Source 
         Zipped</a>] [<a href="readme/dTV_Readme100.htm">README</a>]<br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Original version--support for manual inverse 
         telecine <br>
