Update name change for source zip

--- a/htdocs/developers.htm
+++ b/htdocs/developers.htm
@@ -60,30 +60,30 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
         repository</a> and take a look at the code, then <a href="downloads.htm">download</a> 
         the latest release source zipped. In addition to the latest release source, 
         you may be interested in reviewing the latest beta source, updated from 
-        CVS four times daily (<a href="ftp://deinterlace.sourceforge.net/pub/deinterlace/dtvmodule.zip">dTV 
-        application</a>, <a href="ftp://deinterlace.sourceforge.net/pub/deinterlace/directshowmodule.zip"> 
-        dTV Test DirectShow filter</a>).</p>
+        CVS four times daily (<a href="ftp://deinterlace.sourceforge.net/pub/deinterlace/dscalermodule.zip">application</a>, 
+        <a href="ftp://deinterlace.sourceforge.net/pub/deinterlace/directshowmodule.zip"> 
+        Test DirectShow filter</a>).</p>
       <p>The source compiles under MS Visual C++ 6.0. The application has grown 
         out of the GPL code base of MultiDec and MoreTV, two cable descrambling 
         programs.&nbsp; By combining the GPL parts of both and extending them 
         both, we were able to create a new legal totally open source project.</p>
-      <p>The individual source files are in the&nbsp;<a href="http://cvs.sourceforge.net/cgi-bin/cvsweb.cgi?cvsroot=deinterlace">CVS 
+      <p>The individual source files are in the&nbsp;<a href="http://cvs.sourceforge.net/cgi-bin/viewcvs.cgi/deinterlace/">CVS 
         Repository</a>.&nbsp; To get check-out and check-in access, you will need 
-        to get cvs and to make a few configuration changes see the <a href="CVS_Instructions.htm">dTV 
-        CVS Instructions</a> for more details. Please e-mail your Sourceforge 
-        username to the <a href="mailto:dschmelzer@hotmail.com">webmaster</a> 
-        to be added to the project and for CVS check-out and check-in permission.</p>
+        to get cvs and to make a few configuration changes see the project <a href="CVS_Instructions.htm">CVS 
+        Instructions</a> for more details. Please e-mail your Sourceforge username 
+        to the <a href="mailto:dschmelzer@hotmail.com">webmaster</a> to be added 
+        to the project and for CVS check-out and check-in permission.</p>
       <h2><br>
         Sourceforge Project Developer Links</h2>
       <p><a href="http://sourceforge.net/project/?group_id=7420">Main Project 
         page</a></p>
       <p><a href="http://sourceforge.net/mail/?group_id=7420">Mailing List</a></p>
-      <p><a href="http://cvs.sourceforge.net/cgi-bin/cvsweb.cgi?cvsroot=deinterlace">Browse 
+      <p><a href="http://cvs.sourceforge.net/cgi-bin/viewcvs.cgi/deinterlace/">Browse 
         CVS Repository</a> </p>
-      <p><a href="ftp://deinterlace.sourceforge.net/pub/deinterlace/dtvmodule.zip">dTV 
-        Application Source Zip</a></p>
-      <p><a href="ftp://deinterlace.sourceforge.net/pub/deinterlace/directshowmodule.zip">dTV 
-        Test DirectShow Filter Source Zip</a></p>
+      <p><a href="ftp://deinterlace.sourceforge.net/pub/deinterlace/dscalermodule.zip">Application 
+        Source Zip</a></p>
+      <p><a href="ftp://deinterlace.sourceforge.net/pub/deinterlace/directshowmodule.zip">Test 
+        DirectShow Filter Source Zip</a></p>
       <h2><br>
         Deinterlace Project Developer Resources</h2>
       <p>Mark Rejhon's <a href="32Spec.htm">Spec of His 3:2 Pulldown Algorithm</a>. 
