More release preparations

--- a/dTV/Help/DScaler_Readme.htm
+++ b/dTV/Help/DScaler_Readme.htm
@@ -28,7 +28,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
     <td height="1" width="501"><img src="images/spacer.gif" width="1" height="1"></td>
   </tr>
   <tr> 
-    <td width="160"><img src="images/dscalerlogo.jpg" alt="DScaler Logo" width="329" height="140"></td>
+    <td width="160"><img src="images/dscalerlogo.jpg" alt="DScaler Logo"></td>
     <td colspan="2" align="right" valign="bottom">
       <font face="Verdana, Arial, Helvetica, sans-serif" size="5"><b><!-- #BeginEditable "Page%20Title" -->READ ME&nbsp;<!-- #EndEditable --></b></font></td>
   </tr>
