--- a/dTV/Help/FAQ.htm
+++ b/dTV/Help/FAQ.htm
@@ -29,7 +29,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
     <td height="1" width="501"><img src="images/spacer.gif" width="1" height="1"></td>
   </tr>
   <tr> 
-    <td width="160" rowspan="2"><img src="images/dscalerlogo.jpg" alt="DScaler Logo" width="329" height="140"></td>
+    <td width="160" rowspan="2"><img src="images/dscalerlogo.jpg" alt="DScaler Logo"></td>
     <td colspan="2" align="right" valign="top"> <font face="Verdana, Arial, Helvetica, sans-serif" size="5"><b><font size="1"><!-- #BeginEditable "Language%20Selector" --><!-- #EndEditable --></font></b></font></td>
   </tr>
   <tr> 
