--- a/dTV/Help/IniFile.HTM
+++ b/dTV/Help/IniFile.HTM
@@ -28,7 +28,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
     <td height="1" width="501"><img src="images/spacer.gif" width="1" height="1"></td>
   </tr>
   <tr> 
-    <td width="160"><img src="images/dscalerlogo.jpg" alt="DScaler Logo" width="329" height="140"></td>
+    <td width="160"><img src="images/dscalerlogo.jpg" alt="DScaler Logo"></td>
     <td colspan="2" align="right" valign="bottom">
       <font face="Verdana, Arial, Helvetica, sans-serif" size="5"><b><!-- #BeginEditable "Page%20Title" -->DScaler.ini 
       Settings &nbsp;<!-- #EndEditable --></b></font></td>
@@ -1041,6 +1041,33 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
             0-255.  Values over 20 tend to produce posterization artifacts that
             are more distracting than the video noise was.</td>
         </tr>
+        <tr>
+          <td colspan=3> 
+            <h3>[GammaFilter]</h3>
+          </td>
+        </tr>
+        <tr>
+          <td> 
+            UseGammaFilter
+          </td>
+          <td> 
+            <p align="center">0
+          </td>
+          <td> 
+            Do you want to use the gamma filter
+          </td>
+        </tr>
+        <tr>
+          <td> 
+           Gamma
+          </td>
+          <td> 
+            <p align="center">1000
+          </td>
+          <td> 
+            Gamma adjustment, note 1000 doesn't do anything, 1300 does a 1.3 power adjustment
+          </td>
+        </tr>
       </table>
       <!-- #EndEditable --></td>
   </tr>
@@ -1160,6 +1187,12 @@ section above.</td>
 <td>Examines several nearby pixels to determine which one will produce
 the best image.  Works well on poorly-mastered film material and on
 video with low amounts of motion.</td>
+</tr>
+
+<tr>
+<td>18</td>
+<td>Greedy 2 Frame</td>
+<td>Examines several nearby pixels to determine when to BOB a pixel.  Works well on sports and on video with large amounts of motion.</td>
 </tr>
 
 </table>
